Updated registration validation
