# src/main/java/hu/bme/edu/handmade/controllers/UserController.java
@@ -1,5 +1,6 @@
 package hu.bme.edu.handmade.controllers;
 
+import hu.bme.edu.handmade.exception.ForbiddenException;
 import hu.bme.edu.handmade.mappers.AddressMapper;
 import hu.bme.edu.handmade.mappers.UserMapper;
 import hu.bme.edu.handmade.models.CartProduct;
@@ -26,6 +27,7 @@ import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.security.Principal;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
 
@@ -73,10 +75,28 @@ public class UserController {
         }
     }
 
+    @SecurityRequirement(name = "Bearer_Authentication")
+    @PreAuthorize("hasAuthority('ROLE_USER')")
+    @DeleteMapping(path = { "/delete" })
+    public ResponseEntity<?> deleteOwnProfile(Principal principal) {
+        User user = userService.findUserByEmail(principal.getName());
+        try {
+            userService.deleteUser(user.getId());
+            return ResponseEntity.noContent().build();
+        }
+        catch (EmptyResultDataAccessException e) {
+            return ResponseEntity.notFound().build();
+        }
+    }
+
     @PreAuthorize("hasAuthority('ROLE_USER')")
     @SecurityRequirement(name = "Bearer_Authentication")
     @PutMapping("/{id}")
-    public ResponseEntity<User> updateUser(@PathVariable("id") Long id, @RequestBody UserDto userToUpdate) {
+    public ResponseEntity<User> updateUser(@PathVariable("id") Long id, @RequestBody UserDto userToUpdate, Principal principal) {
+        User principalUser = userService.findUserByEmail(principal.getName());
+        if (!Objects.equals(principalUser.getId(), id)) {
+            throw new ForbiddenException();
+        }
         Optional<User> updatedUser = userService.updateUser(id, userToUpdate);
 
         return updatedUser
@@ -93,14 +113,25 @@ public class UserController {
     @PreAuthorize("hasAuthority('ROLE_USER')")
     @SecurityRequirement(name = "Bearer_Authentication")
     @PostMapping("/{id}/addresses")
-    public AddressDto addUserAddress(@PathVariable("id") Long userId, @RequestBody AddressDto address) {
+    public AddressDto addUserAddress(@PathVariable("id") Long userId, @RequestBody AddressDto address, Principal principal) {
+        User principalUser = userService.findUserByEmail(principal.getName());
+        if (!Objects.equals(principalUser.getId(), userId)) {
+            throw new ForbiddenException();
+        }
         return AddressMapper.INSTANCE.toAddressDto(userService.addAddress(userId, address));
     }
 
     @PreAuthorize("hasAuthority('ROLE_USER')")
     @SecurityRequirement(name = "Bearer_Authentication")
     @PutMapping("/{id}/addresses/{addressId}")
-    public AddressDto updateUserAddress(@PathVariable("id") Long userId, @PathVariable("addressId") Long addressId,@RequestBody AddressDto address) {
+    public AddressDto updateUserAddress(@PathVariable("id") Long userId,
+                                        @PathVariable("addressId") Long addressId,
+                                        @RequestBody AddressDto address,
+                                        Principal principal) {
+        User principalUser = userService.findUserByEmail(principal.getName());
+        if (!Objects.equals(principalUser.getId(), userId)) {
+            throw new ForbiddenException();
+        }
         return AddressMapper.INSTANCE.toAddressDto(userService.updateAddress(userId, address));
     }
 
@@ -108,7 +139,11 @@ public class UserController {
     @PreAuthorize("hasAuthority('ROLE_USER')")
     @SecurityRequirement(name = "Bearer_Authentication")
     @PostMapping("/{id}/unsubscribe")
-    public void unsubscribeFromNewsletter(@PathVariable("id") Long userId) {
+    public void unsubscribeFromNewsletter(@PathVariable("id") Long userId, Principal principal) {
+        User principalUser = userService.findUserByEmail(principal.getName());
+        if (!Objects.equals(principalUser.getId(), userId)) {
+            throw new ForbiddenException();
+        }
         userService.setNewsletterSubscription(userId, false);
     }
 
@@ -116,21 +151,36 @@ public class UserController {
     @PreAuthorize("hasAuthority('ROLE_USER')")
     @SecurityRequirement(name = "Bearer_Authentication")
     @GetMapping("/{id}/cart")
-    List<CartProduct> getCartProducts(@PathVariable("id") long userId) {
+    List<CartProduct> getCartProducts(@PathVariable("id") long userId, Principal principal) {
+        User principalUser = userService.findUserByEmail(principal.getName());
+        if (!Objects.equals(principalUser.getId(), userId)) {
+            throw new ForbiddenException();
+        }
         return cartService.getCartProductsByUser(userId);
     }
 
     @PreAuthorize("hasAuthority('ROLE_USER')")
     @SecurityRequirement(name = "Bearer_Authentication")
     @PostMapping("/{id}/cart")
-    CartProduct addCartProduct(@PathVariable("id") long userId, @RequestBody CartProductDto cartProductDto) {
+    CartProduct addCartProduct(@PathVariable("id") long userId, @RequestBody CartProductDto cartProductDto, Principal principal) {
+        User principalUser = userService.findUserByEmail(principal.getName());
+        if (!Objects.equals(principalUser.getId(), userId)) {
+            throw new ForbiddenException();
+        }
         return cartService.addCartProduct(cartProductDto, userId);
     }
 
     @PreAuthorize("hasAuthority('ROLE_USER')")
     @SecurityRequirement(name = "Bearer_Authentication")
     @PutMapping("/{userId}/cart/{cartId}")
-    CartProduct updateCartProduct(@PathVariable("userId") long userId, @PathVariable("cartId") long cartId, @RequestBody CartProductDto cartProductDto) {
+    CartProduct updateCartProduct(@PathVariable("userId") long userId,
+                                  @PathVariable("cartId") long cartId,
+                                  @RequestBody CartProductDto cartProductDto,
+                                  Principal principal) {
+        User principalUser = userService.findUserByEmail(principal.getName());
+        if (!Objects.equals(principalUser.getId(), userId)) {
+            throw new ForbiddenException();
+        }
         return cartService.findCartProductById(cartId)
                 .map(product -> cartService.updateCartProduct(cartProductDto, cartId))
                 .orElseGet(()->cartService.addCartProduct(cartProductDto, userId));
@@ -139,7 +189,13 @@ public class UserController {
     @PreAuthorize("hasAuthority('ROLE_USER')")
     @SecurityRequirement(name = "Bearer_Authentication")
     @DeleteMapping("/{userId}/cart/{cartId}")
-    ResponseEntity<?> removeCartProduct(@PathVariable("userId") Long userId, @PathVariable("cartId") Long cartId) {
+    ResponseEntity<?> removeCartProduct(@PathVariable("userId") Long userId,
+                                        @PathVariable("cartId") Long cartId,
+                                        Principal principal) {
+        User principalUser = userService.findUserByEmail(principal.getName());
+        if (!Objects.equals(principalUser.getId(), userId)) {
+            throw new ForbiddenException();
+        }
         try {
             cartService.deleteCartProduct(cartId);
             return ResponseEntity.noContent().build();
@@ -153,21 +209,37 @@ public class UserController {
     @PreAuthorize("hasAuthority('ROLE_USER')")
     @SecurityRequirement(name = "Bearer_Authentication")
     @GetMapping("/{user_id}/wishlist")
-    List<ProductDto> getWishList(@PathVariable("user_id") Long id) {
+    List<ProductDto> getWishList(@PathVariable("user_id") Long id, Principal principal) {
+        User principalUser = userService.findUserByEmail(principal.getName());
+        if (!Objects.equals(principalUser.getId(), id)) {
+            throw new ForbiddenException();
+        }
         return wishListService.getWishListItemsByUserId(id);
     }
 
     @PreAuthorize("hasAuthority('ROLE_USER')")
     @SecurityRequirement(name = "Bearer_Authentication")
     @PostMapping("/{user_id}/wishlist")
-    ProductDto addToWishList(@PathVariable("user_id") Long userId, @RequestParam("product_id") Long productId) {
+    ProductDto addToWishList(@PathVariable("user_id") Long userId,
+                             @RequestParam("product_id") Long productId,
+                             Principal principal) {
+        User principalUser = userService.findUserByEmail(principal.getName());
+        if (!Objects.equals(principalUser.getId(), userId)) {
+            throw new ForbiddenException();
+        }
         return wishListService.addToWishlist(userId, productId);
     }
 
     @PreAuthorize("hasAuthority('ROLE_USER')")
     @SecurityRequirement(name = "Bearer_Authentication")
     @DeleteMapping("/{user_id}/wishlist")
-    void removeFromWishList(@PathVariable("user_id") Long userId, @RequestParam("product_id") Long productId) {
+    void removeFromWishList(@PathVariable("user_id") Long userId,
+                            @RequestParam("product_id") Long productId,
+                            Principal principal) {
+        User principalUser = userService.findUserByEmail(principal.getName());
+        if (!Objects.equals(principalUser.getId(), userId)) {
+            throw new ForbiddenException();
+        }
         wishListService.removeFromWishList(userId, productId);
     }
 
